Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3253

MDT objects are not really MD objects

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.5.0
    • Lustre 2.4.0
    • None
    • 3
    • 8056

    Description

      There is currently no reason for struct mdt_object to include a md_object when it can just use an lu_object instead. Same for struct mdt_device. Switching from md_object to lu_object saves 16 bytes and makes for more concise code.

      Attachments

        Activity

          People

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: