LU-3253 mdt: use lu_object/device in mdt_object/device

Have MDT object/device include a LU object/device rather than an MD
object/device as the MDT layer does not define MD operations.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Icf48d8f1288895ba1ffecdf55f0d036df5961d6e
Reviewed-on: http://review.whamcloud.com/6222
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>